# NewTrivia

./: .gitignore  README.md
backend/: game_manager.py  main.py  pyproject.toml  requirements.txt  schemas.py
backend/database/: database.py  models.py
backend/utils/: ai.py  auth.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AILoadingScreen.jsx  GameSettingsModal.jsx  GameView.jsx  LobbyView.jsx  Navbar.jsx  PodiumView.jsx  RankRevealView.jsx
frontend/src/contexts/: GameContext.jsx  ThemeContext.jsx
frontend/src/pages/: History.jsx  Home.jsx  HostDashboard.jsx  Room.jsx
